beta2 first update

--- a/ppLedc/ppLedc/Classes/Basic/View/LightSettingView.xib
+++ b/ppLedc/ppLedc/Classes/Basic/View/LightSettingView.xib
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -116,7 +117,7 @@
                 </textField>
                 <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="100" continuous="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EeK-oG-dT7">
                     <rect key="frame" x="88" y="30" width="274" height="31"/>
-                    <color key="tintColor" red="1" green="0.49327188729999999" blue="0.47399842739999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <color key="tintColor" red="0.61334785463960706" green="0.16245814635095321" blue="0.63671875" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="Eab-Nr-HkT"/>
                     </constraints>
@@ -127,7 +128,7 @@
                 </slider>
                 <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="ryl-X9-vVQ">
                     <rect key="frame" x="88" y="80" width="274" height="31"/>
-                    <color key="tintColor" red="0.99942404029999998" green="0.98555368190000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <color key="tintColor" red="0.58630103074219864" green="0.1552942232332381" blue="0.60864133883248739" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="05g-mj-jJD"/>
                         <constraint firstAttribute="height" constant="30" id="OUx-Ac-oS4"/>
@@ -138,6 +139,7 @@
                 </slider>
                 <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="CGS-3H-VeE">
                     <rect key="frame" x="88" y="130" width="274" height="31"/>
+                    <color key="tintColor" red="0.1738381453" green="0.1451691369" blue="0.78635156309999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="rmf-ns-tZH"/>
                         <constraint firstAttribute="height" constant="30" id="x9m-rt-BuT"/>
@@ -148,6 +150,7 @@
                 </slider>
                 <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="dhM-5n-gYb">
                     <rect key="frame" x="91" y="180" width="271" height="31"/>
+                    <color key="tintColor" red="0.16823163429999999" green="0.1404872395" blue="0.76099068110000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="FM7-on-u61"/>
                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="Mc5-7M-PDx"/>
@@ -158,6 +161,7 @@
                 </slider>
                 <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="GFk-61-5JK">
                     <rect key="frame" x="88" y="230" width="274" height="31"/>
+                    <color key="tintColor" red="0.25055286240000002" green="0.22314707859999999" blue="0.76099068110000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="5Iy-gf-qnv"/>
                         <constraint firstAttribute="height" constant="30" id="Pzi-Gd-rYB"/>
@@ -168,6 +172,7 @@
                 </slider>
                 <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="R3v-zQ-WxW">
                     <rect key="frame" x="88" y="280" width="274" height="31"/>
+                    <color key="tintColor" red="0.49496753290000001" green="0.94049972299999995" blue="0.42737544329999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="OVC-VD-toX"/>
                         <constraint firstAttribute="height" constant="30" id="sIA-Pr-DcZ"/>
@@ -178,6 +183,7 @@
                 </slider>
                 <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="PGR-00-xUU">
                     <rect key="frame" x="88" y="330" width="274" height="31"/>
+                    <color key="tintColor" systemColor="systemPinkColor"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="A1Z-Jy-CA0"/>
                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="MkQ-Ih-xd4"/>
@@ -188,6 +194,7 @@
                 </slider>
                 <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="OP9-wZ-4cI">
                     <rect key="frame" x="88" y="380" width="274" height="31"/>
+                    <color key="tintColor" systemColor="systemGray2Color"/>
                     <constraints>
                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="hoo-1a-R1S"/>
                         <constraint firstAttribute="height" relation="lessThanOrEqual" constant="30" id="jCB-L7-7I6"/>
@@ -197,56 +204,56 @@
                         <action selector="sliderEightChanged:" destination="iN0-l3-epB" eventType="valueChanged" id="BX4-7L-n1c"/>
                     </connections>
                 </slider>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="red" translatesAutoresizingMaskIntoConstraints="NO" id="zV4-FP-Jve">
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="purpleLight" translatesAutoresizingMaskIntoConstraints="NO" id="zV4-FP-Jve">
                     <rect key="frame" x="30" y="30" width="30" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="AN6-1i-E98"/>
                         <constraint firstAttribute="width" constant="30" id="vmw-i0-fcj"/>
                     </constraints>
                 </imageView>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="yellow" translatesAutoresizingMaskIntoConstraints="NO" id="fsP-xd-W0e">
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="purpleLight" translatesAutoresizingMaskIntoConstraints="NO" id="fsP-xd-W0e">
                     <rect key="frame" x="30" y="80" width="30" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="MEN-q1-X2l"/>
                         <constraint firstAttribute="width" constant="30" id="Q7w-7Z-5qI"/>
                     </constraints>
                 </imageView>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="blue" translatesAutoresizingMaskIntoConstraints="NO" id="lKw-cD-6ud">
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="blueLight" translatesAutoresizingMaskIntoConstraints="NO" id="lKw-cD-6ud">
                     <rect key="frame" x="30" y="130" width="30" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="4r6-JF-GpS"/>
                         <constraint firstAttribute="width" constant="30" id="mdh-9g-gXP"/>
                     </constraints>
                 </imageView>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pink" translatesAutoresizingMaskIntoConstraints="NO" id="E79-UM-OiV">
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="blueLight" translatesAutoresizingMaskIntoConstraints="NO" id="E79-UM-OiV">
                     <rect key="frame" x="30" y="180" width="33" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="PaU-ZB-tjF"/>
                         <constraint firstAttribute="width" constant="33" id="Zfk-kR-4TI"/>
                     </constraints>
                 </imageView>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="blue" translatesAutoresizingMaskIntoConstraints="NO" id="ppQ-gL-7c7">
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="blueLight" translatesAutoresizingMaskIntoConstraints="NO" id="ppQ-gL-7c7">
                     <rect key="frame" x="30" y="230" width="30" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="b1n-ID-4TG"/>
                         <constraint firstAttribute="width" constant="30" id="efz-FK-acO"/>
                     </constraints>
                 </imageView>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="red" translatesAutoresizingMaskIntoConstraints="NO" id="Qse-TP-Z6l">
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="greenLight" translatesAutoresizingMaskIntoConstraints="NO" id="Qse-TP-Z6l">
                     <rect key="frame" x="30" y="280" width="30" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="83t-Zm-6ol"/>
                         <constraint firstAttribute="width" constant="30" id="OGl-VN-m1s"/>
                     </constraints>
                 </imageView>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="yellow" translatesAutoresizingMaskIntoConstraints="NO" id="sP5-oU-0CU">
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="redLight" translatesAutoresizingMaskIntoConstraints="NO" id="sP5-oU-0CU">
                     <rect key="frame" x="30" y="330" width="30" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="Oxe-Jm-wcE"/>
                         <constraint firstAttribute="width" constant="30" id="hQ5-o0-ltw"/>
                     </constraints>
                 </imageView>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="red" translatesAutoresizingMaskIntoConstraints="NO" id="AeE-mm-NQs">
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="whiteLight" translatesAutoresizingMaskIntoConstraints="NO" id="AeE-mm-NQs">
                     <rect key="frame" x="30" y="380" width="30" height="30"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="30" id="DVM-be-ii6"/>
@@ -255,7 +262,7 @@
                         <constraint firstAttribute="height" constant="30" id="xsE-JC-IOK"/>
                     </constraints>
                 </imageView>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HXn-ZZ-Edv">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HXn-ZZ-Edv">
                     <rect key="frame" x="100" y="430" width="50" height="50"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="50" id="Cy6-MY-MX2"/>
@@ -265,7 +272,7 @@
                         <action selector="openAllClick:" destination="iN0-l3-epB" eventType="touchUpInside" id="gmF-jC-gZ6"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FyB-JV-KhP">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FyB-JV-KhP">
                     <rect key="frame" x="275" y="430" width="50" height="50"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="50" id="V2Q-1Q-r5y"/>
@@ -275,7 +282,7 @@
                         <action selector="closeeAllClick:" destination="iN0-l3-epB" eventType="touchUpInside" id="GAC-pJ-nqe"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hqV-LM-2V2">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hqV-LM-2V2">
                     <rect key="frame" x="162.5" y="430" width="100" height="30"/>
                     <color key="backgroundColor" red="1" green="0.49327188729999999" blue="0.47399842739999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
@@ -378,9 +385,16 @@
         </view>
     </objects>
     <resources>
-        <image name="blue" width="22" height="22"/>
-        <image name="pink" width="22" height="22"/>
-        <image name="red" width="22" height="22"/>
-        <image name="yellow" width="22" height="22"/>
+        <image name="blueLight" width="100" height="100"/>
+        <image name="greenLight" width="200" height="200"/>
+        <image name="purpleLight" width="100" height="100"/>
+        <image name="redLight" width="100" height="100"/>
+        <image name="whiteLight" width="100" height="100"/>
+        <systemColor name="systemGray2Color">
+            <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemPinkColor">
+            <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
     </resources>
 </document>
