--- a/ppLedc/ppLedc/Classes/Profile/Controller/NewLoginViewController.xib
+++ b/ppLedc/ppLedc/Classes/Profile/Controller/NewLoginViewController.xib
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="NewLoginViewController" customModule="ppLedc" customModuleProvider="target">
             <connections>
                 <outlet property="btnLogin" destination="I0H-fT-CIw" id="4l5-p1-tPc"/>
+                <outlet property="btnWechat" destination="02z-bL-eOH" id="fgN-gU-3Ng"/>
                 <outlet property="txtPwd" destination="JzM-0d-k81" id="mZn-4d-YhF"/>
                 <outlet property="txtUser" destination="ttq-uo-Nqt" id="Jw0-Bd-big"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
@@ -58,7 +60,7 @@
                         <constraint firstAttribute="width" constant="100" id="VV7-gq-PVa"/>
                     </constraints>
                 </imageView>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I0H-fT-CIw">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I0H-fT-CIw">
                     <rect key="frame" x="0.0" y="581" width="414" height="40"/>
                     <color key="backgroundColor" red="1" green="0.49327188729999999" blue="0.47399842739999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
@@ -72,7 +74,7 @@
                         <action selector="onLogin:" destination="-1" eventType="touchUpInside" id="zbF-Ln-X1S"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NCz-4d-9gE">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NCz-4d-9gE">
                     <rect key="frame" x="0.0" y="631" width="414" height="40"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
@@ -98,7 +100,8 @@
                     </connections>
                 </button>
             </subviews>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
                 <constraint firstItem="02z-bL-eOH" firstAttribute="top" secondItem="NCz-4d-9gE" secondAttribute="bottom" constant="10" id="6oa-4L-1f3"/>
                 <constraint firstItem="NCz-4d-9gE" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="9gf-xo-IBc"/>
@@ -121,12 +124,14 @@
                 <constraint firstAttribute="trailing" secondItem="NCz-4d-9gE" secondAttribute="trailing" id="y35-BD-sTd"/>
                 <constraint firstItem="I0H-fT-CIw" firstAttribute="top" secondItem="JzM-0d-k81" secondAttribute="bottom" constant="50" id="zbk-Hi-UNb"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <point key="canvasLocation" x="105.79710144927537" y="99.776785714285708"/>
         </view>
     </objects>
     <resources>
         <image name="loginLogo" width="60" height="60"/>
         <image name="wechat" width="30" height="30"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
